crates/reinhardt-forms/crates/macros/tests/ui/fail/syntax_error_unclosed_brace.stderr
error: unexpected end of input, expected `}`
  --> tests/ui/fail/syntax_error_unclosed_brace.rs:8:15
   |
8  |       let _form = form! {
   |  _______________^
9  | |         fields: {
10 | |             username: CharField {
11 | |         },
12 | |     };
   |  |_____^
   |
   = note: this error originates in the macro `form` (in Nightly builds, run with -Z macro-backtrace for more info)
